Feature: add unique hash to cards db, add yearmonth converter
